--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
+  font-size: 2rem;
   background-color: #eee;
-  padding: 30px;
+  padding: 3rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
