--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,19 +1,17 @@
 .card-container {
-  max-width: 320px;
   display: flex;
   flex-direction: column;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #dddddd;
+  border: 1px solid grey;
   border-radius: 5px;
   padding: 25px;
   cursor: pointer;
-  transform: translateZ(0);
-  backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
+  backface-visibility: hidden;
+  transform: translateZ(0);
   transition: transform 0.25s ease-out;
 }
 
 .card-container:hover {
   transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
