--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-size: 2rem;
-  background-color: #eee;
+  background-color: #aaaaaa;
   padding: 3rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
